--- a/scss/variables/_typography.scss
+++ b/scss/variables/_typography.scss
@@ -18,27 +18,78 @@ $font-weight-medium : 500;
 $font-weight-semi-bold : 600;
 $font-weight-bold : 700;
 
-
-// Font sizes and line height associations
-// … for content
-$font-sizes: (
-  "content": (
-      14: 20,
-      16: 24,
-      18: 28,
-      22: 32,
-      31: 48
+$font-weight : (
+  base : (
+    regular : $font-weight-regular,
+    medium : $font-weight-medium,
+    semi-bold :  $font-weight-semi-bold,
+    bold : $font-weight-bold,
   ),
-  "header": (
-      16: 20,
-      19: 24,
-      21: 24,
-      25: 32,
-      28: 32,
-      36: 40,
-      48: 56
-  )
+  header : (
+    regular : $font-weight-regular,
+    medium : $font-weight-semi-bold,
+    bold : $font-weight-bold,
+  ),
+  content : (
+    regular : $font-weight-regular,
+    medium : $font-weight-medium,
+    bold : $font-weight-bold,
+  ),
 );
 
+
+$font-scales: (
+  mobile-up : (
+      font-size :(
+          header: (
+              h6: 16,
+              h5: 19,
+              h4: 21,
+              h3: 28,
+              h2: 36,
+              h1: 48,
+          ),
+          content: (
+              90: 14,
+              100: 16,
+              120: 18,
+              200: 22,
+              300: 31,
+          )
+      ),
+      line-height :(
+          header: (
+              h6: 20,
+              h5: 24,
+              h4: 24,
+              h3: 32,
+              h2: 40,
+              h1: 56,
+          ),
+          content: (
+              90: 20,
+              100: 24,
+              120: 28,
+              200: 32,
+              300: 48,
+          )
+      )
+  ),
+  mobile : (
+      font-size: (
+        header: (
+          h3: 25,
+          h2: 28,
+          h1: 36,
+        ),
+      ),
+      line-height: (
+        header: (
+          h2: 32,
+          h1: 40,
+        ),
+      )
+  )
+)
 
 
