--- a/html-catalog/scss/qc-catalog-sdg.scss
+++ b/html-catalog/scss/qc-catalog-sdg.scss
@@ -1,16 +1,17 @@
 @use "../../scss/functions" as qc;
 @import "../../scss/mixins";
 @import "../../scss/variables";
+@import "../../css/qc-design-tokens.css";
 
 .color-details {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   > div + div {
-    margin-left: qc.spacer(lg);
+    margin-left: qc.spacer(md);
   }
   & + & {
-    margin-top: qc.spacer(lg);
+    margin-top: qc.spacer(md);
   }
 }
 
@@ -25,7 +26,7 @@
 
   figure {
     width: 100%;
-    padding: qc.spacer(md) qc.spacer(lg);
+    padding: qc.spacer(md) qc.spacer(md);
     border-bottom: 1px solid qc.color("grey","pale");
 
     &:first-child {
@@ -36,7 +37,7 @@
       border-bottom: 0;
     }
     + figure {
-      margin-top: qc.spacer(lg);
+      margin-top: qc.spacer(md);
     }
   }
 }
@@ -52,13 +53,13 @@
   margin-top: qc.rem(6 * $base-spacer);
 
   .qc-row {
-    margin-top: qc.spacer(lg);
+    margin-top: qc.spacer(md);
     > div > div {
       background-color: qc.color("blue","piv");
       opacity: .7;
       height: 100%;
       color: white;
-      padding: qc.spacer(sm) 0;
+      padding: qc.rem($base-spacer) 0;
     }
     &:first-child {
       margin-top: 0;
