--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -4,9 +4,9 @@
 // To be used for general lists
 ul {
     list-style: disc;
-    padding: 0 0 spacer(sm) spacer(xl);
+    padding: 0 0 rem($base-spacer) rem(4 * $base-spacer);
     li {
-        padding: 0 0 spacer(md) 0;
+        padding: 0 0 rem(2 * $base-spacer) 0;
         margin: 0;
         color: color("blue","dark");
     }
