--- a/scss/variables/_grid.scss
+++ b/scss/variables/_grid.scss
@@ -1,11 +1,13 @@
 //---------------
 // grid
 //---------------
+$mobile: 576px;
 $tablet: 768px;
 $desktop: 992px;
 
 // Grid containers
 $container-max-widths: (
+        mobile: $mobile,
         tablet: $tablet,
         desktop: $desktop,
 );
@@ -14,6 +16,6 @@ $container-max-widths: (
 $grid-gutter-width: 32px;
 
 // Grid breakpoints
-$grid-breakpoints: (xs: 0,tablet: $tablet,desktop: $desktop);
+$grid-breakpoints: (xs: 0,mobile:$mobile, tablet: $tablet,desktop: $desktop);
 
 
