--- a/scss/qc-design-tokens.scss
+++ b/scss/qc-design-tokens.scss
@@ -49,4 +49,15 @@
     --qc-spacer-#{$size}: #{rem($value * $base-spacer)};
   }
 
+  @each $index, $blur in $shadings-settings {
+    --qc-box-shadow-#{$index}: #{$blur}px;
+  }
+
+  @each $key, $value in $container-max-widths {
+    --qc-breakpoint-#{$key}: #{$value};
+  }
+  @each $key, $value in $container-max-widths-aliases {
+    --qc-breakpoint-#{$key}: #{$value};
+  }
+  --qc-breakpoint-gutter: #{$grid-gutter-width};
 }
