--- a/scss/function/_colors.scss
+++ b/scss/function/_colors.scss
@@ -1,8 +1,10 @@
+@use "utils" as *;
+
 @function color-name($color, $variant: "") {
   $hyphen: if($variant == "", "","-");
   @return #{$variant}#{$hyphen}#{$color};
 }
 
 @function color($color, $variant : "") {
-  @return var(--qc-#{color-name($color, $variant)});
+  @return token-value(color-name($color, $variant));
 }
