--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -84,6 +84,9 @@ a {
   &:hover,&:focus {
       @include hover-link();
   }
+  :active {
+    color: token("active", "link");
+  }
   .external-link-tail {
     white-space: nowrap;
     img {
